# Kierki

./: CMakeLists.txt  README.md  cards.cpp  cards.h  common.cpp  common.h  err.cpp  err.h  generate.py  kierki-klient.cpp  kierki-klient.h  kierki-serwer.cpp  kierki-serwer.h  main.cpp  player.cpp  player.h
bld/: CMakeCache.txt
